k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quetxal-tv-prod
  labels:
    app: quetxal-tv
    environment: production
